--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,9 @@
 <select class="form-select" aria-label="Default select example">
-  <option selected>Open this select menu</option>
-  <option value="1">One</option>
-  <option value="2">Two</option>
-  <option value="3">Three</option>
+  <option>選擇以下其中選項</option>
+  <option value="全部">全部</option>
+  {{#each categories}}
+    <option value="{{this.name}}">{{this.name}}</option>
+  {{/each}}
 </select>
 
 <div class="d-flex justify-content-between mt-4">
@@ -10,84 +11,38 @@
   <h1 id="total-amount">25260</h1>
 </div>
 
+{{#if records}}
 <div id="record-table" class="d-flex d-md-block mt-4">
   <table class="table table-striped table-hover">
     <tbody>
-      <tr>
-        <td>icon</td>
-        <td>午餐</td>
-        <td>60</td>
-      </tr>
-      <tr>
-        <td>icon</td>
-        <td>晚餐</td>
-        <td>60</td>
-      </tr>
-      <tr>
-        <td>icon</td>
-        <td>捷運</td>
-        <td>120</td>
-      </tr>
-      <tr>
-        <td>icon</td>
-        <td>電影: 驚奇隊長</td>
-        <td>220</td>
-      </tr>
-      <tr>
-        <td>icon</td>
-        <td>租金</td>
-        <td>25000</td>
-      </tr>
+      {{#each records}}
+        <tr>
+          <td>icon</td>
+          <td>{{this.name}}</td>
+          <td>{{this.amount}}</td>
+        </tr>
+      {{/each}}
     </tbody>
   </table>
 
   <table class="w-50 w-md-100 table table-borderless">
     <tbody>
+      {{#each records}}
       <tr>
-        <td><a href="/records/:id/edit" class="text-decoration-none">修改</a></td>
+        <td><a href="/records/{{this._id}}/edit" class="text-decoration-none">修改</a></td>
         <td>
-          <form action="/records/:id?_method=DELETE" method="POST">
+          <form action="/records/{{this._id}}?_method=DELETE" method="POST">
             <button type="submit" class="custom-delete-btn nav-link">刪除</button>
           </form>
         </td>
       </tr>
-      <tr>
-        <td><a href="/records/edit" class="text-decoration-none">修改</a></td>
-        <td>
-          <form action="/records/:id?_method=DELETE" method="POST">
-            <button type="submit" class="custom-delete-btn nav-link">刪除</button>
-          </form>
-        </td>
-      </tr>
-      <tr>
-        <td><a href="/records/edit" class="text-decoration-none">修改</a></td>
-        <td>
-          <form action="/records/:id?_method=DELETE" method="POST">
-            <button type="submit" class="custom-delete-btn nav-link">刪除</button>
-          </form>
-        </td>
-      </tr>
-      <tr>
-        <td><a href="/records/edit" class="text-decoration-none">修改</a></td>
-        <td>
-          <form action="/records/:id?_method=DELETE" method="POST">
-            <button type="submit" class="custom-delete-btn nav-link">刪除</button>
-          </form>
-        </td>
-      </tr>
-      <tr>
-        <td><a href="/records/edit" class="text-decoration-none">修改</a></td>
-        <td>
-          <form action="/records/:id?_method=DELETE" method="POST">
-            <button type="submit" class="custom-delete-btn nav-link">刪除</button>
-          </form>
-        </td>
-      </tr>
+      {{/each}}
     </tbody>
   </table>
 </div>
+{{/if}}
 
 <div class="w-100 mt-5">
-  <a class="btn btn-primary w-75 mx-auto d-block">新增支出</a>
+  <a href="/records/new" class="btn btn-primary w-75 mx-auto d-block">新增支出</a>
 </div>
 
