feat: add put /records/:recordId route and function

--- a/views/new.hbs
+++ b/views/new.hbs
@@ -2,7 +2,7 @@
 {{#if createRecord}}
 /records
 {{else}}
-/records/{{record._id}}
+/records/{{record._id}}?_method=PUT
 {{/if}}" 
 method="POST">
   <div class="row mb-5">
