feat: make icon display apporiately and sligtly adjust index view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,7 +24,7 @@
     <tbody>
       {{#each records}}
         <tr>
-          <td><img src="{{this.icon}}" alt="icon"></td>
+          <td class="icon-cell"><i class="{{this.icon}} fs-3"></i></td>
           <td>
             <div>{{this.name}}</div>
             <div>{{this.date}}</div>
