--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,12 +19,23 @@ main {
   position: relative;
 }
 
-table.table-borderless {
+#record-table table.table-striped tbody tr td:first-child {
+  padding-left: 10px;
+  width: 10%;
+}
+
+#record-table table.table-striped tbody tr td:last-child {
+  text-align: right;
+  font-size: 1.1rem;
+  padding-right: 25px;
+}
+
+#record-table table.table-borderless {
   position: relative;
   width: 25%;
 }
 
-table.table-borderless tbody tr td:first-child {
+#record-table table.table-borderless tbody tr td:first-child {
   text-align: right;
 }
 
@@ -45,7 +56,17 @@ table.table-borderless tbody tr td:first-child {
     font-size: 6rem;
   }
 
-  table.table-borderless {
+  #record-table table.table-striped tbody tr td:first-child {
+    padding-left: 5%;
+    width: 15%;
+  }
+
+  #record-table table.table-striped tbody tr td:last-child {
+    font-size: 1.2rem;
+    padding-right: 10%;
+  }
+
+  #record-table table.table-borderless {
     position: absolute;
     top: 0;
     left: 80%;
