--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,20 +15,14 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">家庭記帳本</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-        </ul>
-      </div>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/users/logout">登出</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/users/login">登入</a>
+        </li>
+      </ul>
     </div>
   </nav>
 
