feat: add post /users/register route and function

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -9,17 +9,17 @@
 
     <div class="mb-3">
       <label for="email" class="form-label">電子信箱</label>
-      <input type="email" class="form-control" id="email" placeholder="輸入信箱地址 (必要欄位)" name="email" value="{{email}}" required>
+      <input type="email" class="form-control" id="email" placeholder="輸入信箱地址 (必要欄位)" name="email" value="{{email}}">
     </div>
 
     <div class="mb-3">
       <label for="password" class="form-label">密碼</label>
-      <input type="password" class="form-control" id="password" placeholder="輸入密碼 (必要欄位)" name="password" value="{{password}}" required>
+      <input type="password" class="form-control" id="password" placeholder="輸入密碼 (必要欄位)" name="password" value="{{password}}">
     </div>
 
     <div class="mb-5">
       <label for="confirm-password" class="form-label">確認密碼</label>
-      <input type="password" class="form-control" id="confirm-password" placeholder="確認密碼 (必要欄位)" name="confirmPassword" value="{{confirmPassword}}" required>
+      <input type="password" class="form-control" id="confirm-password" placeholder="確認密碼 (必要欄位)" name="confirmPassword" value="{{confirmPassword}}">
     </div>
 
     <button type="submit" class="btn btn-primary btn-block w-100">註冊</button>
