--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,12 +16,15 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="/">家庭記帳本</a>
       <ul class="nav">
+        {{#if isAuthenticated}}
         <li class="nav-item">
           <a class="nav-link" href="/users/logout">登出</a>
         </li>
+        {{else}}
         <li class="nav-item">
           <a class="nav-link" href="/users/login">登入</a>
         </li>
+        {{/if}}
       </ul>
     </div>
   </nav>
