feat: add connect-flash and add user-message to most page view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,5 @@
+{{> message}}
+
 <form action="/" method="GET">
   <select id="sort-bar" class="form-select" aria-label="Default select example" name="category">
     <option value="all">全部</option>
