--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,5 +1,8 @@
 <div class="card card-body shadow">
   <h1 class="text-center mt-3">註冊會員</h1>
+
+  {{> message}}
+
   <form action="/users/register" method="POST">
 
     <div class="my-3">
