--- a/views/new.hbs
+++ b/views/new.hbs
@@ -5,7 +5,7 @@
 /records/{{record._id}}?_method=PUT
 {{/if}}" 
 method="POST">
-  <div class="row mb-5">
+  <div class="row mb-3">
     <p class="col-2">*必填欄位</p>
     <h4 class="col-10 text-center">
       {{#if createRecord}}
@@ -15,22 +15,25 @@ method="POST">
       {{/if}}
     </h4>
   </div>
+
+  {{> message}}
+
   <div class="row mb-5">
     <label for="name" class="col-sm-2 col-form-label">名稱*: </label>
     <div class="col-sm-10">
-      <input type="name" class="form-control" id="name" name="name" placeholder="輸入名稱" value="{{name}}" required>
+      <input type="name" class="form-control" id="name" name="name" placeholder="輸入名稱" value="{{name}}">
     </div>
   </div>
   <div class="row mb-5">
     <label for="date" class="col-sm-2 col-form-label">日期*: </label>
     <div class="col-sm-10">
-      <input type="date" class="form-control" id="date" name="date" value="{{date}}" required>
+      <input type="date" class="form-control" id="date" name="date" value="{{date}}">
     </div>
   </div>
   <div class="row mb-5">
     <label for="category" class="col-sm-2 col-form-label">類別*: </label>
     <div class="col-sm-10">
-      <select class="form-select" aria-label="Default select example" name="category" required>
+      <select class="form-select" aria-label="Default select example" name="category">
         <option value=''>請選擇以下其中選項</option>
         {{#each categories}}
           {{#ifCond this._id ../categoryId }}
@@ -45,7 +48,7 @@ method="POST">
   <div class="row mb-5">
     <label for="amount" class="col-sm-2 col-form-label">金額*: </label>
     <div class="col-sm-10">
-      <input type="number" class="form-control" id="amount" name="amount" min="0" placeholder="輸入數字" value="{{amount}}" required>
+      <input type="number" class="form-control" id="amount" name="amount" min="0" placeholder="輸入數字" value="{{amount}}">
     </div>
   </div>
   <div class="row mb-5">
