--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -14,13 +14,12 @@
 </svg>
 
 {{#if info_msg}}
-<div class="alert alert-primary d-flex align-items-center" role="alert">
+<div class="alert alert-primary d-flex align-items-center alert-dismissible fade show" role="alert">
   <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Info:">
     <use xlink:href="#info-fill" />
   </svg>
-  <div>
-    An example alert with an icon
-  </div>
+  <div>{{info_msg}}</div>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
 
