feat: make the whole local email verification much simpleer

--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -56,12 +56,11 @@
 {{/if}}
 
 {{#if alert_msg}}
-<div class="alert alert-danger d-flex align-items-center" role="alert">
+<div class="alert alert-danger d-flex align-items-center alert-dismissible fade show" role="alert">
   <svg class="bi flex-shrink-0 me-2" width="24" height="24" role="img" aria-label="Danger:">
     <use xlink:href="#exclamation-triangle-fill" />
   </svg>
-  <div>
-    An example danger alert with an icon
-  </div>
+  <div>{{alert_msg}}</div>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {{/if}}
