feat: add fully functional time query for records in index.hbs

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-6">
-      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="ex: 2022/1/16 - 2022/2/1" name="timeRange" value="">
+      <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="ex: 2022/1/16 - 2022/2/1" name="timeRange" value="{{timeRange}}">
     </div>
 
     <div class="col-2">
